--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "bootstrap": "^3.4.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy" : "gh-pages -d build", 
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +39,4 @@
   "devDependencies": {
     "gh-pages": "^2.0.1"
   }
-  
 }
