--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gargavi.github.io/reactschedule",
+  
   "name": "my-ap",
   "version": "0.1.0",
   "private": true,
@@ -35,8 +35,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^2.0.1"
-  }
+  }, 
+  "hostname": "college-gpa.com"
+
 }
